--- a/chart.css
+++ b/chart.css
@@ -5,3 +5,10 @@
     width: 100px;
     height: 300px;
 }
+
+#botLogTime{
+    width: 300px;
+    height: 200px;
+    background-color: pink;
+    margin-right: 20px;
+}
